
[discrete]
=== Added

* https://github.com/serpro69/kotlin-faker/pull/214[#214] [core] Update dictionary files, including:
** Data and functions in existing data providers
** `Faker().internet.domain()` now takes optional argument and produces a "safe-domain" (ending with `.example` or `.test`)
** Updates to existing localized dictionaries + one new locale
* https://github.com/serpro69/kotlin-faker/issues/208[#208] [core] Allow `StringProvider#regexify` to take Regex as input
* https://github.com/serpro69/kotlin-faker/pull/202[#202] [core] Allow `randomClassInstance` to directly use predefined generators

++++
<details><summary><h3>New Data Providers</h3></summary>
<p>
++++
* `smashing_pumpkins`
* `the_room`
++++
</p>
</details>
++++

++++
<details><summary><h3>New Locales</h3></summary>
<p>
++++
* `en-KE`
++++
</p>
</details>
++++

[discrete]
=== Changed

* ...

[discrete]
=== Fixed

* https://github.com/serpro69/kotlin-faker/pull/205[#205] [core] Fix `Person.birthDate` range error during leap year
* https://github.com/serpro69/kotlin-faker/issues/204[#204] [core] Fix RandomClassProvider handling "constructor-less" types in collections

[discrete]
=== Other

* ...

====

.[1.15.0] - 2023-10-06
[%collapsible]
====
[discrete]
=== Added

* https://github.com/serpro69/kotlin-faker/pull/195[#195] [core] Update dictionary files, including:
** Data and functions in existing data providers, including new functions:
*** `Faker().company.department()`
*** `Faker().dnd.name...`
*** `Faker().internet.safeDomainSuffix()`
*** `Faker().southPark.episodes()`
** Updates to existing localized dictionaries
* https://github.com/serpro69/kotlin-faker/pull/197[#197] [cli] Render sub-providers functions in cli output
* https://github.com/serpro69/kotlin-faker/pull/200[#200] [core] Add new data providers

++++
<details><summary><h3>New Data Providers</h3></summary>
<p>
++++
* `archer`
* `final_fantasy_xiv`
* `mitch_hedberg`
* `train_station`
++++
</p>
</details>
++++

[discrete]